<resources>
    <string name="app_name">팔딱팔딱</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--face app id 입력-->
    <string name="facebook_app_id">183826128778076</string>

    <!-- Fragment Title -->
    <string name="fragment_first_title">낚시</string>
    <string name="fragment_second_title">어항</string>
    <string name="fragment_third_title">랭킹</string>
    <string name="fragment_forth_title">정보</string>

    <!-- Toast Message -->
    <string name="toast_login_success">로그인 성공</string>
    <string name="toast_login_failed_user_nok">로그인 실패 : 확인되지 않은 사용자</string>
    <string name="toast_login_failed_no_response">로그인 실패  : 서버에 접속할수 없습니다</string>
    <string name="toast_join_failed">가입 실패</string>
    <string name="toast_join_success">가입 성공</string>

    <!--Notice Message-->
    <string name="notice_fixed">낚시대 거치중</string>
    <string name="notice_runaway">입질을 놓쳤습니다!</string>
    <string name="notice_nofixed">대기중...</string>
    <string name="notice_bited">입질이 왔습니다!</string>
    <string name="notice_missing">무언가를 놓쳤습니다!!</string>
    <string name="notice_catched">물고기를 잡았다!!</string>
    <string name="notice_wait">대기중...</string>
    <string name="notice_fighted">사투중!!!</string>

    <!--Activity title -->
    <string name="devicelist_title">블루투스</string>
    <string name="catch_title">물고기를 잡았다!</string>
    <string name="user_edit">프로필 수정</string>

    <!--Btn_text-->
    <string name="btn_scan">스캔</string>
    <string name="btn_scaning">스캔중...</string>
    <string name="btn_doConnect">연결하기</string>
    <string name="btn_login">로그인</string>
    <string name="btn_join">가입</string>
    <string name="tv_savefish">잡은 물고기 어항에 넣기</string>

    <!--Tv_text-->
    <string name="tv_bluetooth_state_using">사용중..</string>
    <string name="tv_bluetooth_state_searching">장치 검색중..</string>
    <string name="tv_first_fragment_unconnected">낚시대가 연결되어 있지 않습니다</string>
    <string name="btn_picture_select">사진 추가하기 </string>
    <string name="btn_cancel">취소</string>
    <string name="btn_ok">확인 </string>
    <string name="tv_maxpower">최대힘</string>
    <string name="tv_avgpower">평균힘</string>
    <string name="tv_weight">무게</string>
    <string name="btn_save">저장</string>
    <string name="tv_gps">위치</string>
    <string name="tv_name">이름</string>
    <string name="tv_species">어종</string>
    <string name="tv_date">시간</string>
    <string name="fishinfo_title">물고기 정보</string>
    <string name="tv_timeing">걸린 시간</string>
    <string name="tv_user">ID</string>
</resources>
